--- a/Plataforma/index.html
+++ b/Plataforma/index.html
@@ -16,13 +16,43 @@
     <section class="content-all">
         <div class="menu">
 
-            <div id="aula-01" class="conclued-aula">
+            <div id="aula-01" class="">
                 <i class="material-icons md-18">check</i> INTROD.
             </div>
 
             <div id="aula-02" class="">
                 <i class="material-icons md-18">check</i> AULA 2
             </div>
+
+
+            <div id="aula-03" class="">
+                <i class="material-icons md-18">check</i> AULA 3
+            </div>
+
+            <div id="aula-04" class="">
+                <i class="material-icons md-18">check</i> AULA 4
+            </div>
+
+            <div id="aula-05" class="">
+                <i class="material-icons md-18">check</i> AULA 5
+            </div>
+
+            <div id="aula-06" class="">
+                <i class="material-icons md-18">check</i> AULA 6
+            </div>
+
+            <div id="aula-07" class="">
+                <i class="material-icons md-18">check</i> AULA 7
+            </div>
+
+            <div id="aula-08" class="">
+                <i class="material-icons md-18">check</i> AULA 8
+            </div>
+
+            <div id="aula-09" class="">
+                <i class="material-icons md-18">check</i> AULA 9
+            </div>
+
 
         
         </div>
@@ -46,7 +76,7 @@
         </div>
     </section>
 
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="Plataforma/js.js"></script>
 </body>
 </html>
