--- a/Plataforma/index.html
+++ b/Plataforma/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plataforma</title>
-    <link rel="stylesheet" href="Plataforma/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -77,6 +77,6 @@
     </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="Plataforma/js.js"></script>
+    <script src="js.js"></script>
 </body>
 </html>
