--- a/Plataforma/index.html
+++ b/Plataforma/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plataforma</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Plataforma/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -14,44 +14,15 @@
     </section>
 
     <section class="content-all">
-        <div class="menu">
+        <div class="menu" id="menu-menu">
 
-            <div id="aula-01" class="">
+            <div id="aula-01" class="conclued-aula">
                 <i class="material-icons md-18">check</i> INTROD.
             </div>
 
-            <div id="aula-02" class="">
-                <i class="material-icons md-18">check</i> AULA 2
-            </div>
+            
 
 
-            <div id="aula-03" class="">
-                <i class="material-icons md-18">check</i> AULA 3
-            </div>
-
-            <div id="aula-04" class="">
-                <i class="material-icons md-18">check</i> AULA 4
-            </div>
-
-            <div id="aula-05" class="">
-                <i class="material-icons md-18">check</i> AULA 5
-            </div>
-
-            <div id="aula-06" class="">
-                <i class="material-icons md-18">check</i> AULA 6
-            </div>
-
-            <div id="aula-07" class="">
-                <i class="material-icons md-18">check</i> AULA 7
-            </div>
-
-            <div id="aula-08" class="">
-                <i class="material-icons md-18">check</i> AULA 8
-            </div>
-
-            <div id="aula-09" class="">
-                <i class="material-icons md-18">check</i> AULA 9
-            </div>
 
 
         
@@ -77,6 +48,6 @@
     </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="js.js"></script>
+    <script src="Plataforma/js.js"></script>
 </body>
 </html>
